# cgula-rust-web-spr24

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  error-notes.md
.trunk/: trunk.yaml
backend/: Cargo.toml  test-api.py
backend/css/: question.css
backend/migrations/: 0001_create.down.sql  0001_create.up.sql
backend/src/: api.rs  appstate.rs  auth.rs  error.rs  main.rs  question.rs  startup.rs  store.rs  web.rs
backend/src/routes/: answer.rs  question.rs
backend/src/types/: pagination.rs  question.rs
backend/templates/: index.html
ch10-web/: Cargo.toml
ch11-web/: Cargo.toml
ch2-web/: Cargo.toml
ch2-web/src/: main.rs
ch3-web/: Cargo.toml
ch3-web/src/: main.rs
ch4-web/: Cargo.toml
ch4-web/src/: handler.rs  main.rs  store.rs
ch5-web/: Cargo.toml
ch6-web/: Cargo.toml
ch7-web/: Cargo.toml
ch8-web/: Cargo.toml
ch9-web/: Cargo.toml
dev-examples/ch2-web/: Cargo.toml
dev-examples/hello/: Cargo.toml
dev-examples/hello/src/: main.rs
frontend/: Cargo.toml
frontend/.trunk/: trunk.yaml
frontend/src/: cookie.rs  finder.rs  main.rs  question.rs
hello/: Cargo.toml
hello/src/: main.rs
in-class/: README.md
questions/: Cargo.toml  Dockerfile  README.Docker.md  setup.toml
questions/css/: question.css
questions/migrations/: 0001_create.up.sql
questions/src/: main.rs  question.rs  startup.rs  store.rs  web.rs
