[package]
name = "backend"
version = "0.1.2"
edition = "2021"
# Do not publish to crates.io
publish = false

[dependencies]
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "migrate",
    "postgres",
] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
clap = { version = "4.5.4", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
    "cargo",
] }
headers = "0.4.0"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-oauth1 = "0.2.4"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
serde_urlencoded = "0.7.1"
serde-wasm-bindgen = "0.6.5"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "full"] }
tower-sessions = "0.12.2"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
bytes = "1.6.0"
http = "1.1.0"
http-body-util = "0.1.1"
hyper-util = "0.1.5"
tower = "0.4.13"
frontend = { path = "../frontend/", version = "0.1.0" }
mysql_async = "0.34.1"
